apps/grafana/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: grafana.ravijey.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-stack-grafana
                port:
                  number: 80
